<resources>
    <string name="app_name"></string>
    <string name="admin_dashboard">Admin Dashboard</string>

    ------------------Main Screen ----------------
    <string name="errorAccount">Invalid Information </string>
    <string name="google_map_key">AIzaSyCkfF5lii-tIKvcHMXGgRFGBcDtV_yUph8</string>
    ------------------Forget password--------------
    <string name="title">Forgot your password?</string>
    <string name="msg">We will send you a code to reset your password</string>
    <string name="mobile">Enter E-mail Id</string>
    <string name="resetBtn">RESET PASSWORD</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="errorMsg"> ! Email Id account does not exits</string>

    -----------------Navigation Drawer--------------
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    ----------------Fragments----------------
    <string name="titleMain">"Today, on the second National Day of Observance for COVID-19, we take time to
mourn the people we lost, as well as recognize those who got sick, and those who are
still suffering from long COVID-19. This is also the day where we recognize and show
gratitude to our health care workers who sacrificed so much, and spent two years on
the front lines to protect us all. I invite everyone in Canada to reflect on the significant
impacts we have felt―and continue to experience-since the onset of the pandemic,
both in our professional and personal lives."</string>

    <string name="covidGuidelines1">- Get the latest case data and updates, learn how to get vaccinated and get advice on what to do next if you think you might have COVID-19.
</string>

    <string name="covidGuidelines2">
        - To book a vaccination slot, call the Provincial Vaccine Contact Centre at 1-833-943-3900 to book over the phone. This line is available 8:00 a.m. to 8:00 p.m., 7 days a week.
</string>

    <string name="covidGuidelines3">
        - If you have a fever, cough and difficulty breathing, seek medical attention. Call in advance so your healthcare provider can direct you to the right health facility. This protects you, and prevents the spread of viruses and other infections.
</string>

    <string name="covidGuidelines4">
        - Properly fitted masks can help prevent the spread of the virus from the person wearing the mask to others. Masks alone do not protect against COVID-19, and should be combined with physical distancing and hand hygiene. Follow the advice provided by your local health authority.
</string>

    <string-array name="arrYesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="arrLocationType">
        <item>-- None --</item>
        <item> Isolation/Quarantine Location</item>
        <item> Employment Location</item>
    </string-array>

    <string-array name="arrPriority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="arrGender">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        <item>Non-binary</item>
        <item>Intersex</item>
        <item>Not Listed</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="arrInvestigationStatus">
        <item>New</item>
        <item>Initial Engagement</item>
        <item>Isolation</item>
        <item>Closed</item>
        <item>None</item>
    </string-array>

    <string-array name="arrCaseType">
        <item>Confirmed</item>
        <item>Close Contact</item>
        <item>Probable</item>
        <item>None</item>
    </string-array>

    <string-array name="arrRace">
        <item>White</item>
        <item>Black, African American</item>
        <item>American Indian or Alaska Native</item>
        <item>Asian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Native Hawaiian</item>
        <item>Filipino</item>
        <item>Vietnamese</item>
        <item>Samoan</item>
        <item>Pacific Islander</item>
        <item>Not Listed</item>
    </string-array>

    <string-array name="arrPrimaryLanguage">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Chinese</item>
        <item>Hindi</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Japanese</item>
        <item>Arabic</item>
        <item>Lahnda</item>
        <item>Bengali</item>
        <item>German</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Swedish</item>
        <item>Korean</item>
        <item>Not Listed</item>
    </string-array>

    <string-array name="arrContactType">
        <item>-- None --</item>
        <item>Boyfriend/Girlfriend, Household</item>
        <item>Boyfriend/Girlfriend, Non-Household</item>
        <item>Camp Counsellor</item>
        <item>Camper</item>
        <item>Campmate</item>
        <item>Caregiver (eg. home nursing/elder care)</item>
        <item>Childcare provider (babysitter/daycare)</item>
        <item>Child supervised (provided daycare/babysat)</item>
        <item>Classmate</item>
        <item>Coach</item>
        <item>Co-worker</item>
        <item>Customer/Client</item>
        <item>Employee</item>
        <item>Family, Household</item>
        <item>Family, Non-Household</item>
        <item>Friend,Household</item>
        <item>Friend, Non-Household</item>
        <item>Healthcare Provider</item>
        <item>Patient</item>
        <item>Re-creational Activity Co-participant (non-sports team)</item>
        <item>Resident at Congregate Facility</item>
        <item>Roommate</item>
        <item>Service Provider (eg. hairdresser, plumber)</item>
        <item>Student</item>
        <item>Supervisor</item>
        <item>Teacher</item>
        <item>Teammate (sports team)</item>
        <item>Other</item>
        <item>Contact Only - No Relationship</item>
    </string-array>
    <string name="title_activity_maps_activitypcrtest">MapsActivitypcrtest</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>