<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/textViewMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textSize="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/editTextForgetEmail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:paddingStart="5dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/errormsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/errorMsg"
        android:textColor="@color/red2"
        android:textSize="14dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetBtn"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primary_color"
        android:layout_marginBottom="15dp"
        />
</LinearLayout>