<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".UsersView.InitialInterview.HomeFragment">

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp"
    >

    <RelativeLayout
        android:id="@+id/relCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="COVID-19 Guidelines - Ontario"
            android:textAlignment="center"
            android:textColor="@color/red_color"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGuidelines1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/covidGuidelines1"
            android:layout_below="@id/txtTitle"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            />

        <TextView
            android:id="@+id/txtGuidelines2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/covidGuidelines2"
            android:layout_below="@id/txtGuidelines1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            />

        <TextView
            android:id="@+id/txtGuidelines3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtGuidelines2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/covidGuidelines3"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtGuidelines4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/covidGuidelines4"
            android:layout_below="@id/txtGuidelines3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            />

    </RelativeLayout>

</ScrollView>



</FrameLayout>